--- a/core/rust1.62/src/actions/Cargo.toml
+++ b/core/rust1.62/src/actions/Cargo.toml
@@ -1,28 +1,26 @@
-#
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
+
 [package]
 name = "actions"
 version = "0.1.0"
-authors = ["Roberto Diaz <roberto@theagilemonkeys.com>"]
 edition = "2018"
 
 [dependencies]
-serde_json = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
-
-
+serde = { version = "1.0.81", features = ["derive"]}
+serde_json = "1.0.81"
+serde_derive = "1.0.81"
+anyhow = "1.0.56"
+wasmtime = "0.34"
+wasmtime-wasi = "0.34"
+wasi-common = "0.34"
+bytes = "1"
+futures = "0.3"
+http = "0.2"
+reqwest = { version = "0.11", default-features = true, features = [
+        "json",
+        "blocking",
+    ] }
+thiserror = "1.0"
+tokio = { version = "1.4.0", features = [ "full" ] }
+tracing = { version = "0.1", features = [ "log" ] }
+url = "2.2.1"
+   
